@@ -164,8 +164,18 @@ main(int argc, char **argv)
 	strlcpy(g.l.path, temp_path, MIN(PATH_MAX, strrchr(temp_path, '/') - temp_path + 1));
 	strlcpy(g.v.file.name, strrchr(temp_path, '/') + 1, NAME_MAX);
 #else
-	strlcpy(g.v.file.name, argv[1], NAME_MAX);
-	strlcpy(g.l.path, argv[2], PATH_MAX);
+	if (combine_path == TRUE && strrchr(argv[1], '/')) {
+		strlcpy(g.v.file.name, strrchr(argv[1], '/') + 1, NAME_MAX);
+		strlcpy(g.l.path, argv[2], PATH_MAX);
+		temp_p = strrchr(g.l.path, '\0');
+		strlcpy(temp_p, argv[1], PATH_MAX - strlen(argv[1]));
+		temp_p = strrchr(g.l.path, '/');
+		*temp_p = '\0';
+		d_log("zipscript-c: combined path used - g.v.file.name='%s' - g.l.path='%s'\n", g.v.file.name, g.l.path);
+	} else {
+		strlcpy(g.v.file.name, argv[1], NAME_MAX);
+		strlcpy(g.l.path, argv[2], PATH_MAX);
+	}
 #endif
 
 	strlcpy(g.v.misc.current_path, g.l.path, PATH_MAX);
